# octoka

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build-release.sh
.github/: dependabot.yml
.github/workflows/: build-release.yml  ci.yml
benches/: crypto.rs
docs/: reverse-proxy.md
src/: auth.rs  cli.rs  config.rs  http.rs  lib.rs  log.rs  main.rs  prelude.rs  util.rs
src/http/: config.rs  fs.rs  mod.rs  proxy.rs
src/jwt/: config.rs  crypto.rs  decode.rs  jwks.rs  keys.rs  mod.rs
src/opencast/: config.rs  mod.rs
tests/: README.md  jwt.rs  path_traversal_attack.rs
tests/jwks/: ed25519.json  es256.json  ps256.json  rs256.json
util/: build-oci.sh  build-release.sh  config.toml  make-release.sh
util/keys/: ed25519-jwks.json  ed25519.pem  es256-jwks.json  es256.pem  rsa.pem
util/loadtest/: Cargo.toml  README.md
util/loadtest/src/: main.rs
util/nginx/: docker-compose.yml  nginx.conf  option-auth-request.conf  option-error-page.conf  option-x-accel-redirect.conf
util/test-downloads/mh_default_org/engage-player/362c07af-7e61-45b6-b3bf-416df75ed1b0/security-policy-series/: xacml.xml
util/test-downloads/mh_default_org/engage-player/ea197560-e207-4164-b055-560bcc70ec50/cb49118b-24b6-4bb2-b549-fc7c81e46b54/: episode-security.xml
util/test-downloads/mh_default_org/engage-player/ea197560-e207-4164-b055-560bcc70ec50/security-policy-series/: xacml.xml
