[package]
name = "ocsfs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.96"
confique = { version = "0.3.0", features = ["toml"] }
futures = { version = "0.3.1", default-features = false, features = ["std"] }
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["client", "server", "http1", "http2", "server-graceful"] }
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
