[package]
name = "ocsfs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.96"
arc-swap = "1.7.1"
base64 = "0.22.1"
bytes = "1.10.1"
confique = { version = "0.3.0", features = ["toml"] }
elliptic-curve = { version = "0.13.8", features = ["jwk"] }
form_urlencoded = "1.2.1"
futures = { version = "0.3.1", default-features = false, features = ["std"] }
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.3", features = ["http2"] }
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "server", "http1", "http2", "server-graceful"] }
p256 = { version = "0.13.2", features = ["jwk"] }
p384 = { version = "0.13.1", features = ["jwk"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
signature = "2.2.0"
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
