[package]
name = "octoka"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.96"
arc-swap = "1.7.1"
aws-lc-rs = { version = "1.14.1", default-features = false }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
confique = { version = "0.4.0", features = ["toml"] }
form_urlencoded = "1.2.1"
futures = { version = "0.3.1", default-features = false, features = ["std"] }
http = "1.3.1"
http-body-util = "0.1.2"
http-range = "0.1.5"
httpdate = "1.0.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27.3", features = ["http2"] }
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "server", "http1", "http2", "server-graceful"] }
mime_guess = { version = "2.0.5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
divan = "0.1.21"
pem-rfc7468 = "0.7"
ed25519-dalek = { version = "2.2.0", features = ["pem", "pkcs8"] }
p256 = { version = "0.13.2", features = ["jwk"] }
p384 = { version = "0.13.1", features = ["jwk"] }
signature = "2.2.0"
elliptic-curve = { version = "0.13.8", features = ["jwk"] }
ed448-goldilocks = "0.14.0-pre.2"
pkcs8 = { version = "0.11.0-rc.6", features = ["pem"] }

[[bench]]
name = "crypto"
harness = false


[profile.release]
debug = "line-tables-only"
codegen-units = 1

[profile.release.package."*"]
debug = false
